force-app/main/default/objects/SAP_Sales_Actual_Report__c/SAP_Sales_Actual_Report__c.object-meta.xml
<CustomObject>
    <label>SAP Sales Actual Report</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Sales Actual Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>