force-app/main/default/objects/SAP_Sales_Actual_Report__c/fields/Current_Month_Completion_Dollar__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Completion_Dollar__c</fullName>
    <formula>IF( OR(ISBLANK(SAP_Sales_Actual_Plan__r.Target_Dollar__c),SAP_Sales_Actual_Plan__r.Target_Dollar__c=0), 0, PO_for_Current_Month_Dollar__c / SAP_Sales_Actual_Plan__r.Target_Dollar__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Completion Dollar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>