force-app/main/default/objects/SAP_Sales_Actual_Report__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <description>如Flag字段有值，则为Requested Delivery Date当月及之前发货的数据</description>
    <label>Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>