force-app/main/default/objects/SAP_Sales_Actual_Report__c/fields/Future_Month_Invoicing_GAP_Dollar__c.field-meta.xml
<CustomField>
    <fullName>Future_Month_Invoicing_GAP_Dollar__c</fullName>
    <formula>if(ISBLANK(Flag__c),SAP_Sales_Actual__r.Pending_DN_Net_Income_USD__c + SAP_Sales_Actual__r.Back_Order_Amount_USD__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Month Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>