force-app/main/default/objects/SAP_Sales_Actual_Report__c/fields/Invoiced_Dollar__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Dollar__c</fullName>
    <formula>SAP_Sales_Actual__r.Invoice_Net_Income_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiced Dollar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>