force-app/main/default/objects/SAP_Sales_Actual_Report__c/fields/Invoiced_Unit__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Unit__c</fullName>
    <formula>SAP_Sales_Actual__r.Invoiced_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiced Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>