force-app/main/default/objects/SAP_Sales_Actual_Report__c/fields/Invoicing_GAP_from_PO_on_Hand_Dollar__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_GAP_from_PO_on_Hand_Dollar__c</fullName>
    <formula>if(ISBLANK(Flag__c),0, SAP_Sales_Actual__r.Pending_DN_Net_Income_USD__c + SAP_Sales_Actual__r.Back_Order_Amount_USD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing GAP Dollar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>