force-app/main/default/objects/SAP_Sales_Actual_Report__c/fields/Invoicing_GAP_from_PO_on_Hand_Unit__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_GAP_from_PO_on_Hand_Unit__c</fullName>
    <formula>if(ISBLANK(Flag__c),0,  SAP_Sales_Actual__r.Pending_DN_Qty__c + SAP_Sales_Actual__r.Back_Order_Qty__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing GAP Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>