force-app/main/default/objects/SAP_Sales_Actual_Report__c/fields/PO_for_Current_Month_Dollar__c.field-meta.xml
<CustomField>
    <fullName>PO_for_Current_Month_Dollar__c</fullName>
    <formula>Invoiced_Dollar__c + Invoicing_GAP_from_PO_on_Hand_Dollar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month Dollar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>