force-app/main/default/objects/SAP_Sales_Actual_Report__c/fields/PO_for_Current_Month_Unit__c.field-meta.xml
<CustomField>
    <fullName>PO_for_Current_Month_Unit__c</fullName>
    <formula>Invoiced_Unit__c + Invoicing_GAP_from_PO_on_Hand_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>