force-app/main/default/objects/SAP_Sales_Actual_Report__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>SAP_Sales_Actual__r.Product_Line_SF_Text__c</formula>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>