force-app/main/default/objects/SAP_Sales_Actual_Report__c/fields/SAP_Sales_Actual__c.field-meta.xml
<CustomField>
    <fullName>SAP_Sales_Actual__c</fullName>
    <label>SAP Sales Actual</label>
    <referenceTo>SAP_Sales_Actual__c</referenceTo>
    <relationshipLabel>SAP Sales Actual Reports</relationshipLabel>
    <relationshipName>SAP_Sales_Actual_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>