force-app/main/default/objects/SAP_Sales_Actual_Report__c/fields/SAP_Sales_Actual_Plan__c.field-meta.xml
<CustomField>
    <fullName>SAP_Sales_Actual_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAP Sales Actual Plan</description>
    <label>SAP Sales Actual Plan</label>
    <referenceTo>SAP_Sales_Actual_Plan__c</referenceTo>
    <relationshipLabel>SAP Sales Actual Reports</relationshipLabel>
    <relationshipName>SAP_Sales_Actual_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>