force-app/main/default/objects/SAP_Sales_Actual_Report__c/fields/Total_PO_Completion_Dollar__c.field-meta.xml
<CustomField>
    <fullName>Total_PO_Completion_Dollar__c</fullName>
    <formula>IF( OR(ISBLANK(SAP_Sales_Actual_Plan__r.Target_Dollar__c),SAP_Sales_Actual_Plan__r.Target_Dollar__c=0), 0, Total_PO_on_hand_Dollar__c/SAP_Sales_Actual_Plan__r.Target_Dollar__c)</formula>
    <label>PO Completion Dollar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>