force-app/main/default/objects/SAP_Sales_Actual_Report__c/fields/Total_PO_on_hand_Dollar__c.field-meta.xml
<CustomField>
    <fullName>Total_PO_on_hand_Dollar__c</fullName>
    <formula>SAP_Sales_Actual__r.Invoice_Net_Income_USD__c + SAP_Sales_Actual__r.Pending_DN_Net_Income_USD__c + SAP_Sales_Actual__r.Back_Order_Amount_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO on hand Dollar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>