force-app/main/default/objects/SAP_Sales_Actual_Report__c/fields/Total_PO_on_hand_Unit__c.field-meta.xml
<CustomField>
    <fullName>Total_PO_on_hand_Unit__c</fullName>
    <formula>SAP_Sales_Actual__r.Invoiced_Qty__c + SAP_Sales_Actual__r.Pending_DN_Qty__c + SAP_Sales_Actual__r.Back_Order_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO on hand Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>